RESOLVED FIXED75869
Compilation errors on build-webkit --debug --no-workers on mac.
https://bugs.webkit.org/show_bug.cgi?id=75869
Summary Compilation errors on build-webkit --debug --no-workers on mac.
Pablo Flouret
Reported 2012-01-09 10:56:00 PST
Compilation errors on build-webkit --debug --no-workers on mac.
Attachments
proposed patch (2.54 KB, patch)
2012-01-09 10:57 PST, Pablo Flouret
no flags
Pablo Flouret
Comment 1 2012-01-09 10:57:13 PST
Created attachment 121691 [details] proposed patch
Adam Barth
Comment 2 2012-01-25 01:49:53 PST
Comment on attachment 121691 [details] proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=121691&action=review > Source/WebKit/mac/Workers/WebWorkersPrivate.mm:39 > -#if ENABLE_WORKERS > +#if defined(ENABLE_WORKERS) && ENABLE_WORKERS We can't used ENABLE(WORKERS) here?
Pablo Flouret
Comment 3 2012-01-25 01:51:21 PST
Comment on attachment 121691 [details] proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=121691&action=review >> Source/WebKit/mac/Workers/WebWorkersPrivate.mm:39 >> +#if defined(ENABLE_WORKERS) && ENABLE_WORKERS > > We can't used ENABLE(WORKERS) here? Doesn't include config.h, i think.
Adam Barth
Comment 4 2012-01-25 01:52:24 PST
Comment on attachment 121691 [details] proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=121691&action=review >>> Source/WebKit/mac/Workers/WebWorkersPrivate.mm:39 >>> +#if defined(ENABLE_WORKERS) && ENABLE_WORKERS >> >> We can't used ENABLE(WORKERS) here? > > Doesn't include config.h, i think. Crazy
WebKit Review Bot
Comment 5 2012-01-25 03:29:19 PST
Comment on attachment 121691 [details] proposed patch Rejecting attachment 121691 [details] from commit-queue. New failing tests: media/audio-garbage-collect.html Full output: http://queues.webkit.org/results/11264467
Pablo Flouret
Comment 6 2012-01-25 10:13:31 PST
Test failure looks unrelated.
Adam Barth
Comment 7 2012-01-30 22:59:54 PST
Comment on attachment 121691 [details] proposed patch Yeah, sorry. That test was flaky for a while.
WebKit Review Bot
Comment 8 2012-01-31 00:22:50 PST
Comment on attachment 121691 [details] proposed patch Clearing flags on attachment: 121691 Committed r106342: <http://trac.webkit.org/changeset/106342>
WebKit Review Bot
Comment 9 2012-01-31 00:22:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.