Fix compilation errors on build-webkit --debug --no-workers on mac. https://bugs.webkit.org/show_bug.cgi?id=75869

Patch by Pablo Flouret <pablof@motorola.com> on 2012-01-31
Reviewed by Adam Barth.

Source/WebCore:

* WebCore.exp.in:

Source/WebKit/mac:

* Workers/WebWorkersPrivate.mm:
(+[WebWorkersPrivate workerThreadCount]):

Canonical link: https://commits.webkit.org/94299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106342 268f45cc-cd09-0410-ab3c-d52691b4dbfc